fix(Button): fix text alignment for mobile anchor button

--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -14,6 +14,7 @@
 a.e-button {
   align-items: center;
   display: inline-flex;
+  justify-content: center;
   text-decoration: none !important;
 }
 
